# tscompare

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.md  README.md  codecov.yml  prek.toml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  python-packaging.yml  tests.yml  wheels.yml
docs/: Makefile  _config.yml  _toc.yml  api.md  development.md  intro.md  usage.md
requirements/: development.txt
requirements/CI-docs-pip/: requirements.txt
requirements/CI-tests-conda/: requirements.txt
requirements/CI-tests-pip/: requirements.txt
tests/: test_dissimilarity.py  test_methods.py
tscompare/: __init__.py  methods.py  provenance.py
