[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]

build-backend = "setuptools.build_meta"

[project]
name = "tscompare"
dynamic = [
    "version",
]
description = "Tools for comparing tree sequences."
readme = "README.md"
maintainers = [
    { name = "Tskit Developers", email = "admin@tskit.dev" },
]
authors = [
    { name = "Tskit Developers", email = "admin@tskit.dev" },
]
keywords = [
    "population genetics",
    "tree sequence",
    "tskit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "tskit>=0.5.0",
    "scipy>=1.7.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://tskit.dev/tscompare"
"Bug Tracker" = "https://github.com/tskit-dev/tscompare/issues"
Documentation = "https://tskit.dev/tscompare/docs/"
"Source Code" = "https://github.com/tskit-dev/tscompare"

[project.optional-dependencies]
test = [
    "tskit==0.6.0",
    "numpy==2.2.4",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "scipy==1.15.2",
    "msprime==1.3.4",
]
docs = [
    "jupyter-book==1.0.4.post1",
    "breathe==4.35.0",
    "sphinx-autodoc-typehints==2.3.0",
    "sphinx-issues==5.0.0",
    "sphinx-argparse==0.5.2",
    "svgwrite==1.4.3",
    "tskit==0.6.0",
    "tsinfer==0.4.1",
    "scipy==1.15.2",
    "msprime==1.3.4",
    "sphinx-book-theme",
    "numcodecs>=0.6,<0.15.1", #Pinned due to https://github.com/zarr-developers/numcodecs/issues/733
    "setuptools_scm==9.2.0",
]
dev = [
    "tskit",
    "numpy",
    "scipy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "msprime",
]

[tool.setuptools]
packages = [
    "tscompare",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

