[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]

build-backend = "setuptools.build_meta"

[project]
name = "tscompare"
dynamic = [
    "version",
]
description = "Tools for comparing tree sequences."
readme = "README.md"
maintainers = [
    { name = "Tskit Developers", email = "admin@tskit.dev" },
]
authors = [
    { name = "Tskit Developers", email = "admin@tskit.dev" },
]
keywords = [
    "population genetics",
    "tree sequence",
    "tskit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = [
    "tskit>=1.0.0",
    "scipy>=1.7.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://tskit.dev/tscompare"
"Bug Tracker" = "https://github.com/tskit-dev/tscompare/issues"
Documentation = "https://tskit.dev/tscompare/docs/"
"Source Code" = "https://github.com/tskit-dev/tscompare"

[dependency-groups]
test = [
    "msprime",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "jupyter-book<2",
    "msprime",
    "sphinx-argparse",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "tsinfer",
]
lint = [
    "ruff==0.15.1",
    "prek==0.3.3",
]
packaging = [
    "twine",
    "validate-pyproject[all]",
]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "packaging"},
]

[tool.setuptools]
packages = [
    "tscompare",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 89

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
fixable = ["ALL"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "E741", # using 'l' as a variable name
    "N806", "N802", "N803", # Various nags about uppercase vars
    "PT030", # `pytest.warns(DeprecationWarning)` is too broad.
]

